fix blockquote styling on mobile

--- a/_sass/basscss/_base-typography.scss
+++ b/_sass/basscss/_base-typography.scss
@@ -59,6 +59,7 @@ blockquote {
   margin-block-end: 1em;
   margin-inline-start: 40px;
   margin-inline-end: 40px;
+  padding-left: 1em;
 }
 
 blockquote footer {
